--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^2.2.7",
     "@stripe/stripe-react-native": "^0.38.4",
+    "agora-react-native-rtm": "^1.5.1",
     "agora-rn-uikit": "^5.0.2",
+    "axios": "^1.7.3",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-agora": "^4.3.2",
